# compilescript

./: .drone.yml  CMakeLists.txt  README.adoc  README.md  build_manpage.sh  compilescript.1.adoc
man/: build_manpage.sh  compilescript.1.adoc
src/: CMakeLists.txt  main.cpp  version.hpp.in
